--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,7 +1,7 @@
 !!! 5
 html
   head
-    title This is my site
+    title moxboxx
     meta(content='width=device-width, height=device-height, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0', name='viewport')
     meta(content='yes', name='apple-mobile-web-app-capable')
     meta(content='chrome=1', http-equiv='X-UA-Compatible')
@@ -9,19 +9,37 @@ html
     link(rel='stylesheet', href='/stylesheets/main.css')
 
   body
-    #header
-      h1 My Site
+    #flash
+    header
+      span moxboxx
 
-    if session.authenticated
-      a(href='/logout') Log out
-    else
-      form(method='post', action='/login', id='login-form')
-        a(href='#', id='login') Log in
-        input(type='hidden', name='bid_assertion', value='1')
+      ul.actions
+        if session.email
+          li
+            a(href='/dashboard') Dashboard
+          li
+            a(href='/profile') Profile
+          li
+            a(href='#', id='logout') Log out
+        else
+          li
+            a(href='#', id='login') Log in
 
-    block content
+    ul#playlist-actions
+      li
+        if pageType === 'new'
+          a(href='/playlist/new', class='on') Create Playlist
+        else
+          a(href='/playlist/new') Create Playlist
+      li
+        if pageType === 'list'
+          a(href='/playlists', class='on') View Playlists
+        else
+          a(href='/playlists') View Playlists
+
+    .wrapper
+      block content
     #footer
 
-    script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js')
-    script(src='https://browserid.org/include.js', type='text/javascript')
-    script(src='/javascripts/main.js')
+    script(src='https://login.persona.org/include.js', type='text/javascript')
+    script(src='/javascripts/require.js', data-main='/javascripts/main')
