--- a/views/new.jade
+++ b/views/new.jade
@@ -2,6 +2,6 @@ extend layout
 
 block content
   section
-    form(method='post', action='/playlist')
+    form(method='post', action='/playlist', id='new-playlist')
       input(type='text', name='title', placeholder='title')
       button(type='submit') Create
