--- a/views/playlist.jade
+++ b/views/playlist.jade
@@ -1,7 +1,21 @@
 extend layout
 
 block content
-  h1= playlist.title
-  h2= 'Created by ' + playlist.owner.username
-  img(src='#{playlist.owner.gravatar}')
-  h3= playlist.created
+  .playlist-item
+    h1= playlist.title
+    h3= 'Created by ' + playlist.owner.username
+    img(src='#{playlist.owner.gravatar}')
+    h3= playlist.created
+
+  ol.moxlist
+    for mox in moxes
+      li!= mox.content
+
+  #add-track
+    h2 Add a mox
+    p This can be a youtube/vimeo/soundcloud/rdio url
+
+    form(method='post', action='/mox', id='new-mox')
+      input(type='text', name='url')
+      input(type='hidden', name='playlist_id', value='#{playlist.id}')
+      button(type='submit') Add
