--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -63,6 +63,7 @@ html, body {
 
 body {
     font-family: 'LeagueGothicRegular';
+    font-size: 20px;
     text-transform: uppercase;
 }
 
@@ -116,7 +117,11 @@ header span {
     float: left;
 }
 
-h1 {
+h1, h2 {
+    font-size: 40px;
+}
+
+h3 {
     font-size: 20px;
 }
 
@@ -150,6 +155,21 @@ h1 {
 
 section {
     padding: 20px 10px;
+}
+
+.playlist-item {
+    float: left;
+    padding: 20px;
+    width: 200px;
+}
+
+.playlist-item h1 {
+    padding: 0 10px 10px 0;
+}
+
+#add-track {
+    float: left;
+    max-width: 500px;
 }
 
 #footer {
