--- a/views/playlists.jade
+++ b/views/playlists.jade
@@ -8,4 +8,5 @@ block content
       li
         h2
           a(href='/playlist/#{playlist.id}', title='#{playlist.title}')= playlist.title
+        p= playlist.created
         img(src='#{playlist.owner.gravatar}')
