--- a/views/profile.jade
+++ b/views/profile.jade
@@ -3,6 +3,6 @@ extend layout
 block content
   h1 Edit your profile
 
-  form(method='post', action='/profile')
+  form(method='post', action='/profile', id='profile-edit')
     input(type='text', name='username', placeholder='Username', value='#{session.username || ''}')
     button(type='submit') Update
