--- a/views/new.jade
+++ b/views/new.jade
@@ -2,6 +2,7 @@ extend layout
 
 block content
   section
+    h1 Create a new playlist
     form(method='post', action='/playlist', id='new-playlist')
       input(type='text', name='title', placeholder='title')
       button(type='submit') Create
