--- a/views/profile.jade
+++ b/views/profile.jade
@@ -4,5 +4,8 @@ block content
   h1 Edit your profile
 
   form(method='post', action='/profile', id='profile-edit')
+    label(for='username', class='tip') Username
     input(type='text', name='username', placeholder='Username', value='#{session.username || ''}')
+    label(for='location', class='tip') Location
+    input(type='text', name='location', placeholder='Where are you located?', value='#{location}')
     button(type='submit') Update
