--- a/views/playlist.jade
+++ b/views/playlist.jade
@@ -26,4 +26,4 @@ block content
             != mox.content
             .item-actions
               if session.email && isOwner
-                a(href='javascript:;', class='mox-delete') delete
+                a(href='javascript:;', class='mox-delete', data-context='mox-delete') delete
