--- a/views/layout.jade
+++ b/views/layout.jade
@@ -8,7 +8,7 @@ html
     link(rel='shortcut icon', href='/images/favicon.png')
     link(rel='stylesheet', href='/stylesheets/main.css')
 
-  body
+  body(style='background-image: url(#{background});')
     #flash
     header
       span moxboxx
