--- a/views/profile.jade
+++ b/views/profile.jade
@@ -18,6 +18,6 @@ block content
         img(src='#{session.background}')
         button(type='submit') Remove current background
     form(method='post', action='/background', id='background-update', enctype='multipart/form-data')
-      label(for='background', class='tip') Background Image
+      label(for='background', class='tip') Background Image (100 kb maximum file size)
       input(type='file', name='background')
       button(type='submit') Update Background Image
