--- a/views/layout.jade
+++ b/views/layout.jade
@@ -11,32 +11,27 @@ html
   body(style='background-image: url(#{background});')
     #flash
     header
-      span moxboxx
+      a(href='/', class='logo')
+        span moxboxx
 
       ul.actions
         if session.email
           li
-            if pageType === 'dashboard'
-              a(href='/dashboard', class='on') Dashboard
-            else
-              a(href='/dashboard') Dashboard
+            a(href='javascript:;') Playlists
+            ul
+              li
+                a(href='/playlists') View Playlists
+              li
+                a(href='/playlist/new') Create Playlist
           li
-            if pageType === 'new'
-              a(href='/playlist/new', class='on') Create Playlist
-            else
-              a(href='/playlist/new') Create Playlist
-          li
-            if pageType === 'playlists'
-              a(href='/playlists', class='on') View Playlists
-            else
-              a(href='/playlists') View Playlists
-          li
-            if pageType === 'profile'
-              a(href='/profile', class='on') Profile
-            else
-              a(href='/profile') Profile
-          li
-            a(href='#', id='logout') Log out
+            a(href='javascript:;') You
+            ul
+              li
+                a(href='/user/#{session.userId}') View Profile
+              li
+                a(href='/profile') Settings
+              li
+                a(href='#', id='logout') Log out
         else
           li
             a(href='#', id='login') Log in
