added new font; redirect on new signup; layout fixups

--- a/views/index.jade
+++ b/views/index.jade
@@ -1,7 +1,6 @@
 extend layout
 
 block content
-  if session.email
-    p
-      = 'You are logged in as '
-      span= session.email
+  h1 moxboxx
+  p.tip Share playlists
+  p Build playlists with: Youtube, Vimeo, Soundcloud, Mixcloud, Rdio
