--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -60,6 +60,13 @@ html, body {
     font-style: normal;
 }
 
+@font-face {
+    font-family: 'BPdotsUnicaseSquareBold';
+    src: url('../fonts/BPdotsUnicaseSquareBold-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
 body {
     background-image: url('/images/back.png');
     background-attachment: fixed;
@@ -139,20 +146,23 @@ form button {
 }
 
 .tip {
-    background-color: #f2ffad;
+    background-color: #fdff7d;
 }
 
 .actions {
     position: fixed;
-    right: 20px;
+    right: 0;
     top: -2px;
     z-index: 5;
 }
 
 .actions li a {
     background-color: #eee;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+    box-shadow: #333 1px 1px 3px;
     color: #333;
-    padding: 10px 5px 2px 5px;
+    padding: 10px 5px 5px 5px;
     text-align: center;
     min-width: 70px;
 }
@@ -161,15 +171,13 @@ form button {
     display: none;
     position: absolute;
     right: 0;
-    top: 50px;
+    top: 49px;
 }
 
 .actions > li > ul li a {
-    box-shadow: #333 1px 1px 3px;
-    margin-bottom: 3px;
-}
-
-.actions > li > ul li a {
+    background-color: #fff;
+    border-radius: 5px;
+    margin-bottom: 2px;
     min-width: 150px;
 }
 
@@ -206,7 +214,7 @@ header {
     margin-bottom: 30px;
 }
 
-header span, h1, h2, h3, p, #playlists li,
+#logo, h1, h2, h3, p, #playlists li,
 #moxlist, form label {
     background: rgba(256, 256, 256, 0.83);
 }
@@ -215,12 +223,30 @@ header a {
     display: inline-block;
     float: left;
     font-family: 'LeagueGothicRegular';
-    font-size: 35px;
+    font-size: 32px;
     margin-right: 25px;
 }
 
+#logo {
+    background-color: transparent;
+    color: #111;
+    font-family: 'BPdotsUnicaseSquareBold';
+    font-size: 30px;
+    line-height: 25px;
+    margin: 0;
+    padding: 2px 0 5px 2px;
+    text-shadow: #fff 0 0 3px;
+}
+
+.page-index #logo {
+    display: none;
+}
+
 h1, h2 {
+    color: #111;
+    font-family: 'LeagueGothicRegular';
     font-size: 40px;
+    text-transform: uppercase;
 }
 
 h1 {
@@ -228,6 +254,23 @@ h1 {
     display: inline-block;
     float: left;
     margin-bottom: 30px;
+}
+
+.page-index .wrapper {
+    margin-top: 40px;
+}
+
+.page-index h1 {
+    color: #bfff43;
+    float: left;
+    font-family: 'BPdotsUnicaseSquareBold';
+    font-size: 100px;
+}
+
+.page-index p {
+    display: inline-block;
+    float: right;
+    margin-bottom: 10px;
 }
 
 h2 {
@@ -260,7 +303,7 @@ time {
     left: 0;
     padding: 10px 20px;
     position: absolute;
-    top: 70px;
+    top: 100px;
     width: 495px;
 }
 
@@ -269,13 +312,18 @@ time {
     color: #ffd9d9;
 }
 
+.main-wrapper {
+    margin: 0 auto;
+    width: 870px;
+}
+
 .wrapper {
     background: rgba(256, 256, 256, 0.85);
     border-radius: 25px;
     clear: both;
     display: block;
     float: left;
-    margin: 2px 0 0;
+    margin: 2px 0;
     min-height: 100px;
     padding: 30px 20px;
     width: 830px;
@@ -293,10 +341,7 @@ time {
 }
 
 .playlist-item img {
-    clear: both;
     display: block;
-    float: left;
-    margin-right: 30px;
     width: 100px;
 }
 
@@ -423,8 +468,9 @@ time {
     padding-bottom: 10px;
 }
 
-#background-delete > img {
+#background-delete > .preview {
     border-radius: 200px;
+    display: inline-block;
     height: 150px;
     margin-left: 20px;
     width: 150px;
