--- a/views/playlists.jade
+++ b/views/playlists.jade
@@ -7,12 +7,13 @@ block content
     h1= owner.username
 
   if pageType == 'userProfile'
-    if owner.location
-      p Location: #{owner.location}
+    .user-info
+      if owner.location
+        p Location: #{owner.location}
 
-    if owner.website
-      p Website:&#xa0;
-        a(href='#{owner.website}', target='_blank')= owner.website
+      if owner.website
+        p Website:&#xa0;
+          a(href='#{owner.website}', target='_blank')= owner.website
 
   ol#playlists
     for playlist in playlists
