--- a/views/playlist.jade
+++ b/views/playlist.jade
@@ -4,7 +4,7 @@ block content
   h1#playlist-title
     span= playlist.title
     if session.email && isOwner
-      form(method='post', action='/playlist/#{playlist.id}')
+      form(method='post', action='/playlist/#{playlist.id}', id='edit-playlist-title')
         input(type='text', name='title', id='edit-title', value='#{playlist.title}', data-action='/playlist/#{playlist.id}')
         button(type='submit') Update
       a(href='javascript:;', class='playlist-edit', data-context='playlist-edit') edit
